--- a/package.json
+++ b/package.json
@@ -27,6 +27,14 @@
 			}
 		]
 	},
+	"dependencies": {
+		"cli-table3": "^0.6.5",
+		"consola": "^3.4.2",
+		"fast-sort": "^3.4.1",
+		"picocolors": "^1.1.1",
+		"tinyglobby": "^0.2.14",
+		"valibot": "^1.1.0"
+	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -p ./",
@@ -41,13 +49,7 @@
 		"@types/node": "16.x",
 		"typescript": "^5.0.0",
 		"@biomejs/biome": "^1.9.4",
-		"@vscode/vsce": "^2.15.0",
-		"cli-table3": "^0.6.5",
-		"consola": "^3.4.2",
-		"fast-sort": "^3.4.1",
-		"picocolors": "^1.1.1",
-		"tinyglobby": "^0.2.14",
-		"valibot": "^1.1.0"
+		"@vscode/vsce": "^2.15.0"
 	},
 	"publisher": "ccusage",
 	"repository": {
