--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ccusage-vscode",
   "displayName": "Claude Code Usage Monitor",
+  "icon": "./images/icon.png",
   "description": "Monitor your Claude Code usage and costs in VS Code status bar",
   "version": "0.1.0",
   "engines": {
